--- a/k2p.config
+++ b/k2p.config
@@ -4,7 +4,6 @@ CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
 
 # 文件系统镜像等支持:
-CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 # CONFIG_TARGET_ROOTFS_EXT4FS
 # CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
@@ -42,6 +41,9 @@ CONFIG_PACKAGE_kmod-fs-squashfs=y
 
 # 常用LuCI插件选择(无线应选中mtwifi):
 CONFIG_PACKAGE_luci-app-mtwifi=y
+CONFIG_LIBCURL_NO_SMB="!"
+# CONFIG_PACKAGE_luci-app-samba is not set
+# CONFIG_PACKAGE_autosamba is not set
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_DEFAULT_ddns-scripts_aliyun=y
 CONFIG_DEFAULT_ddns-scripts_dnspod=y
