--- a/k2p.config
+++ b/k2p.config
@@ -69,17 +69,17 @@ CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-wol=y
-# CONFIG_PACKAGE_luci-app-koolddns=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-nps=y
 CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_clash=y
-# CONFIG_PACKAGE_luci-app-clash is not set
+CONFIG_PACKAGE_luci-app-v2ray-server=y
 
+# CONFIG_PACKAGE_clash is not set
+# CONFIG_PACKAGE_luci-app-clash is not set
+# CONFIG_PACKAGE_luci-app-koolddns=y
 # CONFIG_PACKAGE_luci-app-verysync is not set
-# CONFIG_PACKAGE_luci-app-v2ray-server is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
 # CONFIG_PACKAGE_luci-app-openvpn is not set
 # CONFIG_PACKAGE_luci-app-rp-pppoe-server is not set
