--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -10,7 +10,7 @@ name: Create release
 
 on:
   schedule:
-    - cron: 10 6 */3 * *
+    - cron: 10 6 * * 5
 #     - cron: 0 8 */3 * *
 #  watch:
 #    types: started
