--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -17,8 +17,8 @@ on:
 #     - master
 #    paths:
 #      - '.config'
-#  schedule:
-#    - cron: 0 8 */3 * *
+  schedule:
+    - cron: 50 11 * * *
 #  watch:
 #    types: started
 
