--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -19,7 +19,7 @@ on:
 #    paths:
 #      - '.config'
   schedule:
-    - cron: 30 6 */10 * *
+    - cron: 30 6 * * *
 #          分 时 日 月 周
 #   - cron: 0 8 */3 * *
 #  watch:
