--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -28,7 +28,7 @@ env:
 
 on:
   schedule:
-    - cron: 40 13 * * *
+    - cron: 30 14 * * *
   repository_dispatch:
   workflow_dispatch:
     inputs:
@@ -84,8 +84,8 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x $DIY_P2_SH
         cd openwrt
-        ../$DIY_P2_SH
-
+        $GITHUB_WORKSPACE/$DIY_P2_SH
+        cd -
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
