--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -12,6 +12,20 @@
 
 name: Build OpenWrt K2P
 
+on:
+  repository_dispatch:
+#  release:
+#    types: published
+#  push:
+#    branches:
+#      - main
+#    paths:
+#      - 'config/Lean_LEDE_K2P.config'
+  schedule:
+    - cron: 25 15 * * *
+#  watch:
+#    types: started
+
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
@@ -19,23 +33,13 @@ env:
   CONFIG_FILE: k2p.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
+  SSH_ACTIONS: true
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-
-on:
-  schedule:
-    - cron: 35 12 * * *
-  repository_dispatch:
-  workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
 
 jobs:
   build:
@@ -87,12 +91,9 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
     - name: SSH connection to Actions
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        
+      uses: P3TERX/debugger-action@main
+      if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
+
     - name: Download package
       id: package
       run: |
@@ -174,16 +175,15 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body: 🚀 GitHub Automated Build | 自动编译
+        tag_name: ${{ steps.tag.outputs.release_tag }}    
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
         
     - name: Remove old Artifacts
       uses: c-hive/gha-remove-artifacts@v1.2.0
       with:
-        age: '3 day'
-        skip-recent: 5
+        retain_days: 30
+        keep_minimum_runs: 5
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.1.0
