--- a/k2p.config
+++ b/k2p.config
@@ -114,6 +114,7 @@ CONFIG_PACKAGE_luci-app-unblockmusic=y
 # LuCI主题:
 CONFIG_PACKAGE_luci-theme-opentomcat=y
 CONFIG_PACKAGE_luci-theme-netgear=y
+CONFIG_PACKAGE_luci-theme-edge=y
 # CONFIG_PACKAGE_luci-theme-argon-mc is not set
 # CONFIG_PACKAGE_luci-theme-argon is not set
 # CONFIG_DEFAULT_luci-theme-bootstrap-mod is not set
