--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -18,11 +18,13 @@ on:
 #    types: published
 #  push:
 #    branches:
-#      - main
+#      - master
 #    paths:
 #      - 'config/Lean_LEDE_K2P.config'
   schedule:
-    - cron: 15 22 * * *
+    - cron: 30 3 * * /5
+#          分 时 日 月 周5
+#   - cron: 0 8 */3 * *
 #  watch:
 #    types: started
 
@@ -34,7 +36,7 @@ env:
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: false
-  UPLOAD_BIN_DIR: true
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
   UPLOAD_WETRANSFER: true
