--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -22,7 +22,7 @@ on:
 #    paths:
 #      - 'config/Lean_LEDE_K2P.config'
   schedule:
-    - cron: 30 3 * * /5
+    - cron: 30 14 * * *
 #          分 时 日 月 周5
 #   - cron: 0 8 */3 * *
 #  watch:
