--- a/k2p.config
+++ b/k2p.config
@@ -77,6 +77,7 @@ CONFIG_PACKAGE_luci-app-nps=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 # CONFIG_PACKAGE_luci-app-v2ray-server is not set
 CONFIG_PACKAGE_luci-app-unblockmusic=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
 
 # CONFIG_PACKAGE_clash is not set
 # CONFIG_PACKAGE_luci-app-clash is not set
