--- a/k2p.config
+++ b/k2p.config
@@ -76,7 +76,6 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-nps=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 # CONFIG_PACKAGE_luci-app-v2ray-server is not set
-CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 
 # CONFIG_PACKAGE_clash is not set
@@ -115,7 +114,7 @@ CONFIG_PACKAGE_luci-app-adguardhome=y
 # LuCI主题:
 CONFIG_PACKAGE_luci-theme-opentomcat=y
 CONFIG_PACKAGE_luci-theme-netgear=y
-CONFIG_PACKAGE_luci-theme-edge=y
+# CONFIG_PACKAGE_luci-theme-edge is not set
 # CONFIG_PACKAGE_luci-theme-argon-mc is not set
 # CONFIG_PACKAGE_luci-theme-argon is not set
 # CONFIG_DEFAULT_luci-theme-bootstrap-mod is not set
