--- a/.github/delete-older-releases.yml
+++ b/.github/delete-older-releases.yml
@@ -14,4 +14,4 @@ jobs:
         keep_latest: 5
         delete_tags: true
       env:
-        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.LEO_TOKEN }}
