--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -12,7 +12,14 @@
 #=================================================
 
 name: Build OpenWrt K2P
-
+on:
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
 on:
   repository_dispatch:
 #  release:
